--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+
+
+삼성전자 출신이 만든 가장 믿을 수 있는 소개팅앱, 100% 학교/직장 인증을 통해 믿을 수 있어요!
+
+
+- "내일은커플"이 안전한 이유!
+> 절대 유령회원이 없음을 민형사상 법적으로 보장합니다.
+> 사진 및 개인정보 유출 방지를 위한 안전한 보호 기술 적용.
+> 아는사람 피하기 기능으로 완벽하게 지인을 피할수 있음.
+
+- 아무나 가입할 수 없는 프리미엄 소개팅
+> 진지한 연애를 원하는 능력있는 남성들과 아름다운 여성들만 가입할 수 있습니다.
+> CEO, 변호사, 의사등의 직군과 명문대 출신, 경제력 있는 회원들을 만날 수 있습니다.
+
+- 매일 새로운 이성의 카드
+> 하루 2번 매력적인 이성의 카드를 받을 수 있습니다.
