--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
-
-
-삼성전자 출신이 만든 가장 믿을 수 있는 소개팅앱, 100% 학교/직장 인증을 통해 믿을 수 있어요!
-
-
-- "내일은커플"이 안전한 이유!
-> 절대 유령회원이 없음을 민형사상 법적으로 보장합니다.
-> 사진 및 개인정보 유출 방지를 위한 안전한 보호 기술 적용.
-> 아는사람 피하기 기능으로 완벽하게 지인을 피할수 있음.
-
-- 아무나 가입할 수 없는 프리미엄 소개팅
-> 진지한 연애를 원하는 능력있는 남성들과 아름다운 여성들만 가입할 수 있습니다.
-> CEO, 변호사, 의사등의 직군과 명문대 출신, 경제력 있는 회원들을 만날 수 있습니다.
-
-- 매일 새로운 이성의 카드
-> 하루 2번 매력적인 이성의 카드를 받을 수 있습니다.
+<p>&nbsp;</p>
+<p><img style="margin-left: auto; margin-right: auto; display: block;" src="https://raw.githubusercontent.com/mj3sda/mj3sda.github.io/master/intro.jpg" alt="image is not found" /></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>삼성전자&nbsp;출신이&nbsp;만든&nbsp;가장&nbsp;믿을&nbsp;수&nbsp;있는&nbsp;소개팅앱,&nbsp;100%&nbsp;학교/직장&nbsp;인증을&nbsp;통해&nbsp;믿을&nbsp;수&nbsp;있어요! <br /><br /><br />-&nbsp;"내일은커플"이&nbsp;안전한&nbsp;이유! <br />&gt;&nbsp;절대&nbsp;유령회원이&nbsp;없음을&nbsp;민형사상&nbsp;법적으로&nbsp;보장합니다. <br />&gt;&nbsp;사진&nbsp;및&nbsp;개인정보&nbsp;유출&nbsp;방지를&nbsp;위한&nbsp;안전한&nbsp;보호&nbsp;기술&nbsp;적용. <br />&gt;&nbsp;아는사람&nbsp;피하기&nbsp;기능으로&nbsp;완벽하게&nbsp;지인을&nbsp;피할수&nbsp;있음. <br /><br />-&nbsp;아무나&nbsp;가입할&nbsp;수&nbsp;없는&nbsp;프리미엄&nbsp;소개팅 <br />&gt;&nbsp;진지한&nbsp;연애를&nbsp;원하는&nbsp;능력있는&nbsp;남성들과&nbsp;아름다운&nbsp;여성들만&nbsp;가입할&nbsp;수&nbsp;있습니다. <br />&gt;&nbsp;CEO,&nbsp;변호사,&nbsp;의사등의&nbsp;직군과&nbsp;명문대&nbsp;출신,&nbsp;경제력&nbsp;있는&nbsp;회원들을&nbsp;만날&nbsp;수&nbsp;있습니다. <br /><br />-&nbsp;매일&nbsp;새로운&nbsp;이성의&nbsp;카드 <br />&gt;&nbsp;하루&nbsp;2번&nbsp;매력적인&nbsp;이성의&nbsp;카드를&nbsp;받을&nbsp;수&nbsp;있습니다.</p>
+<p>&nbsp;</p>
+<hr contenteditable="false" data-ke-type="horizontalRule" data-ke-style="style5" />
+<p><span style="color: #333333;">고객센터 help.mj3.sda@gmail.com</span><br /><span style="color: #666666;"><span>엠제이쓰리&nbsp;</span>(대표이사 김정부 / 개인정보보호책임자 CTO 이영필) /<span>&nbsp;</span><span>경기도 광명시 광명동 200-6</span><span>&nbsp;</span>/ 0507-1312-6578(이메일만운영)</span><span style="color: #666666;"><span>&nbsp;</span>/ 사업자등록번호 276-29-00990 / 통신판매신고 제2020-경기광명-0470호</span></p>
